--- a/index.html
+++ b/index.html
@@ -332,9 +332,25 @@
                 <a href="#" class="portfolio__item horizonal">
                     <img src="img/works/mac.jpg" alt="test">
                 </a>
-                
             </div>
     </section>
+    <section class="carusel">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Обо мне</h2>
+            <div class="title title_fz36 title__section-subtitle">Иннополис</div>
+            <div class="divider"></div>
+            <div class="slider-container">
+            <div class="slider">
+              <img src="img/works/Serificat1.jpg" alt="Белый пушистый кот">
+              <img src="img/works/Pril.jpg" alt="Рыжий пушистый кот в джинсах">
+            </div>
+            <button class="prev-button" aria-label="Посмотреть предыдущий слайд">&lt;</button>
+            <button class="next-button" aria-label="Посмотреть следующий слайд">&gt</button>
+          </div>
+        </div>
+        </div>
+    </section>
+    <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
