--- a/index.html
+++ b/index.html
@@ -350,6 +350,56 @@
         </div>
         </div>
     </section>
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__photo">
+                    <img src="img/main_photo.jpg" alt="photo">
+                </div>
+                <div class="contacts__descr">
+                    <h2 class="title title_fz16_location contacts__title">Контакты</h2>
+                    <div class="title title_fz36 contacts__subtitle">Свяжитесь со мной</div>
+                    <div class="divider"></div>
+
+                    <div class="title title_fz14_location contacts__text">
+                        Любым удобным для вас способом:
+                    </div>
+                    <div class="contacts__social">
+                        <a href="https://vk.com/laguns" class="contacts__link">
+                            <img src="icons/social//vk_icon_135042.png" alt="vk">
+                        </a>
+                        <a href="https://t.me/laguns23" class="contacts__link">
+                            <img src="icons/social/telegram.svg" alt="telegram">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/instagram_straight.svg" alt="instagram">
+                        </a>
+                    </div>
+                    <div class="title title_fz14_location contacts__text">
+                        Или оставьте ваши данные и я сама вам напишу:
+                    </div>
+
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input">
+                            <input name="name" id="name" type="text">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="contacts__input">
+                            <input name="email" id="email" type="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+                        <div class="contacts__textarea">
+                            <textarea name="text" id="text"></textarea>
+                                <label for="text">Ваше сообщение</label>
+                        </div>
+                        <div>
+                            <button class="contacts__btn btn">Отправить сообщение</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
