--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                         </a>
                     </div>
                     <div class="title title_fz14_location contacts__text">
-                        Или оставьте ваши данные и я сама вам напишу:
+                        Или оставьте ваши данные и я сам вам напишу:
                     </div>
 
                     <form action="#" class="contacts__form">
