--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     <h4 class="title title_fz14 title_fz14_location">ЮФУ</h4>
                                     <div class="resume__item-location">Диплом бакалавра | Ростов-на-Дону (2020-2024)</div>
                                 </div>
-                                <div class="resume__item-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. </div>
+                                <div class="resume__item-body">Я успешно завершил 4 курса по направлению "Прикладная информатика" в ЮФУ, а также окончил военную кафедру. </div>
                             </div>
                         </li>
                         <li>
@@ -195,7 +195,7 @@
                                     <h4 class="title title_fz14 title_fz14_location">Udemy</h4>
                                     <div class="resume__item-location">Курсы по Web-разработке</div>
                                 </div>
-                                <div class="resume__item-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. </div>
+                                <div class="resume__item-body">Такжебыло пройдено обучение на образовательной платформе Udemy, где я приобрёл обширные знания в области web-разработки, и создав несколько проектов в своё портфолио! </div>
                             </div>
                         </li>
                     </ul>
